Add client resource names endpoint
