# API/Pages/API/ClientResNames.php
@@ -1,0 +1,64 @@
+<?php
+/*
+ * Bacularis - Bacula web interface
+ *
+ * Copyright (C) 2021-2026 Marcin Haba
+ *
+ * The main author of Bacularis is Marcin Haba, with contributors, whose
+ * full list can be found in the AUTHORS file.
+ *
+ * You may use this file and others of this release according to the
+ * license defined in the LICENSE file, which includes the Affero General
+ * Public License, v3.0 ("AGPLv3") and some additional permissions and
+ * terms pursuant to its AGPLv3 Section 7.
+ */
+
+use Bacularis\API\Modules\BaculumAPIServer;
+use Bacularis\Common\Modules\Errors\BconsoleError;
+
+/**
+ * Client resource names endpoint.
+ *
+ * @author Marcin Haba <marcin.haba@bacula.pl>
+ * @category API
+ */
+class ClientResNames extends BaculumAPIServer
+{
+	public function get()
+	{
+		$misc = $this->getModule('misc');
+		$offset = $this->Request->contains('offset') ? (int) ($this->Request['offset']) : 0;
+		$limit = $this->Request->contains('limit') ? (int) ($this->Request['limit']) : 0;
+		$search = $this->Request->contains('search') && $misc->isValidName($this->Request['search']) ? $this->Request['search'] : null;
+
+		$client_cmd = ['.client'];
+		$bconsole = $this->getModule('bconsole');
+		$clients = $bconsole->bconsoleCommand(
+			$this->director,
+			$client_cmd,
+			null,
+			true
+		);
+		$error = $clients->exitcode !== 0;
+
+		if ($offset > 0 || $limit > 0) {
+			if ($limit == 0) {
+				$limit = null;
+			}
+			$clients->output = array_slice($clients->output, $offset, $limit);
+		}
+
+		if (!$error && $clients->output && $search) {
+			$misc::filterList($clients->output, "*{$search}*");
+		}
+
+		if (!$error) {
+			$this->output = $clients->output;
+			$this->error = BconsoleError::ERROR_NO_ERRORS;
+		} else {
+			$emsg = var_export($clients->output, true);
+			$this->output = BconsoleError::MSG_ERROR_WRONG_EXITCODE . " ExitCode: {$clients->exitcode}, Output: {$emsg}.";
+			$this->error = BconsoleError::ERROR_WRONG_EXITCODE;
+		}
+	}
+}
