# API/openapi_bacularis.json
@@ -924,6 +924,15 @@
 			}
 		},
 		"parameters": {
+			"Offset": {
+				"name": "offset",
+				"in": "query",
+				"description": "Item offset",
+				"required": false,
+				"schema": {
+					"type": "integer"
+				}
+			},
 			"Limit": {
 				"name": "limit",
 				"in": "query",
@@ -1658,6 +1667,50 @@
 				"parameters": [
 					{
 						"$ref": "#/components/parameters/ClientId"
+					}
+				]
+			}
+		},
+		"/api/v3/clients/resnames": {
+			"get": {
+				"tags": ["clients"],
+				"summary": "Client resource names",
+				"description": "Get client resource names (after applying console ACL)",
+				"responses": {
+					"200": {
+						"description": "List of client resource names",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"output": {
+											"type": "array",
+											"items": {
+												"description": "List resource client names",
+												"type": "string"
+											}
+										},
+										"error": {
+											"type": "integer",
+											"description": "Error code",
+											"enum": [0, 1, 4, 5, 6, 7, 9, 11, 1000]
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"parameters": [
+					{
+						"$ref": "#/components/parameters/Limit"
+					},
+					{
+						"$ref": "#/components/parameters/Offset"
+					},
+					{
+						"$ref": "#/components/parameters/Search"
 					}
 				]
 			}
